--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
+<input id="add">
+<button onclick="addCat(document.getElementById('add').value)">Add</button>
+
+
+<div id="myList">
+</div>
+
 <script> var exports = {"__esModule": true}</script>
 <script src="./index.js"></script>
